# bambu-3mf

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  THIRD-PARTY-NOTICES  cube_20mm.gcode.3mf  install.sh  pyproject.toml  test-cube-petgcf.gcode.3mf  test_box_10x10x5.gcode.3mf
.github/workflows/: build-bridge.yml  ci.yml  docs.yml  prepare-release.yml  publish-docker.yml  release.yml
bridge/: Cargo.toml  Dockerfile
bridge/shim/: shim.cpp
bridge/src/: agent.rs  callbacks.rs  fetch.rs  ffi.rs  handle.rs  main.rs  print_job.rs  server.rs
changes/: +align-ruff-config.misc  +ams-confirm.feature  +ams-mapping-display.feature  +ams-tray-info-idx.bugfix  +api-docs.feature  +baked-docker-perms.bugfix  +bed-type-mismatch.feature  +bridge-cancel-flag.feature  +bridge-cancel.feature  +bridge-channel.feature  +bridge-ci-trigger.misc  +bridge-credentials-bambox.bugfix  +bridge-cross-compile.misc  +bridge-cstring.bugfix  +bridge-dockerfile-fetch-so.misc  +bridge-mechanical.misc  +bridge-print-cancel.feature  +bridge-status-crash.bugfix  +bridge-version-check.feature  +cancel-command.feature  +cli-version.feature  +cura-bed-type-and-time.bugfix  +cura-shared-nozzle.bugfix  +daemon-cli.feature  +daemon-watch.feature  +docker-daemon.feature  +docker-slim.misc  +e2e-cura-vs-bbl.feature  +e2e-validation.misc  +extract-boo-cloud.misc  +fix-ams-fallback.bugfix  +fix-bridge-ci.bugfix  +fix-cache-dir.bugfix  +fix-compatible-printer.bugfix  +fix-cura-p1s-bugs.bugfix  +fix-duplicate-slots.bugfix  +fix-e014-redundant-select.bugfix  +fix-header-precedence.bugfix  +fix-packaging.bugfix  +fix-pytest-config.misc  (+82 more)
docs/: daemon-bridge-design.md  sdk-send-message-investigation.md
docs/decisions/: 001-template-driven-settings.md
scripts/: install-test.sh
src/bambox/: __init__.py  assemble.py  auth.py  bridge.py  cli.py  credentials.py  cura.py  gcode_compat.py  pack.py  settings.py  templates.py  thumbnail.py  toolpath.py  ui.py  validate.py
src/bambox/data/cura/: bambox_p1s.def.json  bambox_p1s_ams.def.json
src/bambox/gcode_templates/: p1s_end.gcode.j2  p1s_start.gcode.j2  p1s_toolchange.gcode.j2
src/bambox/profiles/: _uniform_array_keys.json  _varying_keys.json  base_p1s.json  filament_asa.json  filament_petg_cf.json  filament_pla.json
src/bambu_3mf/: __init__.py  bridge.py  cli.py  gcode_compat.py  input_spec.example.json  pack.py  settings.py  templates.py  thumbnail.py  toolpath.py
src/bambu_3mf/gcode_templates/: p1s_end.gcode.j2
src/bambu_3mf/profiles/: _varying_keys.json  base_p1s.json
tests/: test_assemble.py  test_auth.py  test_bridge.py  test_bridge_docker.py  test_cli.py  test_credentials.py  test_cura.py  test_e2e.py  test_e2e_cura_vs_bbl.py  test_gcode_compat.py  test_pack.py  test_release_readiness.py  test_settings.py  test_templates.py  test_thumbnail.py  test_toolpath.py  test_validate.py
tests/fixtures/: cube.gcode  naked_toolpath.gcode  project_settings.json  reference.gcode.3mf
tests/fixtures/e2e_cura_p1s/: estampo.toml  reference.gcode.3mf
tests/fixtures/e2e_cura_p1s/profiles/cura/definitions/: bambox_p1s_ams.def.json  bambox_p1s_ams_extruder_0.def.json  bambox_p1s_ams_extruder_1.def.json  bambox_p1s_ams_extruder_2.def.json  bambox_p1s_ams_extruder_3.def.json
