[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bambu-3mf"
version = "0.1.0"
description = "Package plain G-code into Bambu Lab .gcode.3mf files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "estampo contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Printing",
]

[project.scripts]
bambu-3mf = "bambu_3mf.cli:main"

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
