[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bambox"
version = "0.1.0"
description = "Package plain G-code into Bambu Lab .gcode.3mf files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "estampo contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Printing",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "jinja2>=3.1.0",
    "pillow>=10.0.0",
    "towncrier>=24.7.0",
]

[project.scripts]
bambox = "bambox.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/bambox/pack.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true
disable_error_code = ["import-untyped"]

[tool.towncrier]
directory = "changes"
filename = "CHANGELOG.md"
title_format = "## {version} — {project_date}"
issue_format = "[#{issue}](https://github.com/estampo/bambox/pull/{issue})"

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bugfixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "misc"
  name = "Misc"
  showcontent = true
