[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bambox"]

[project]
name = "bambox"
version = "0.4.3"
description = "Package plain G-code into Bambu Lab .gcode.3mf files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]
authors = [{ name = "estampo contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Printing",
]

[project.optional-dependencies]
cloud = [
    "requests>=2.28.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "jinja2>=3.1.0",
    "pillow>=10.0.0",
    "towncrier>=24.7.0",
    "requests>=2.28.0",
]
docs = [
    "pdoc>=14.0.0",
]

[project.scripts]
bambox = "bambox.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/bambox/pack.py" = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
markers = [
    "e2e: end-to-end tests requiring estampo CLI and Docker (deselect with '-m not e2e')",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true
disable_error_code = ["import-untyped"]

[tool.towncrier]
directory = "changes"
filename = "CHANGELOG.md"
title_format = "## {version} — {project_date}"
issue_format = "[#{issue}](https://github.com/estampo/bambox/pull/{issue})"

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bugfixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "misc"
  name = "Misc"
  showcontent = true
